# AI-assisted-development-crashcourse

./: .cursorrules  .cursorrules-live-demo  LICENSE  README.md  combined_workshop_slides.md  ingest.txt  map.md  pyproject.toml  slides.md  workshop_presentation_script.md  workshop_slides.md
ai_assisted_development_crashcourse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
archived_slides/: LLMs for Teaching - Workshop.txt  What I learned after 3000 hours using ChatGPT and friends, and what it can do for you, your student, and your courses.txt
rule_templates/: 00_antreas_cursorrules.md  01_the_first_principles_thinker.cursorrules  01_the_first_principles_thinker.md  02_the_zen_coder.cursorrules  02_the_zen_coder.md  03_the_antifragile_engineer.cursorrules  03_the_antifragile_engineer.md  04_the_stoic_engineer.cursorrules  04_the_stoic_engineer.md  05_the_digital_alchemist.cursorrules  05_the_digital_alchemist.md  06_the_storyteller.cursorrules  06_the_storyteller.md  07_the_digital_gardener.cursorrules  07_the_digital_gardener.md  08_the_cartographer.cursorrules  08_the_cartographer.md  09_the_architect.cursorrules  09_the_architect.md  10_the_minimalist.cursorrules  10_the_minimalist.md  11_the_systems_weaver.cursorrules  11_the_systems_weaver.md  12_the_renovator.cursorrules  12_the_renovator.md  13_the_startup_catalyst.cursorrules  13_the_startup_catalyst.md  14_the_rigorous_scientist.cursorrules  14_the_rigorous_scientist.md  15_the_digital_sentinel.cursorrules  15_the_digital_sentinel.md
scripts/: ingest_content.py  map_directory.py
website/: index.html  (+1 more)
(+1 files in other folders)
