[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assisted-development-crashcourse"
version = "0.1.0"
description = "A crash course on AI-assisted development, including a website and use cases."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Antreas Antoniou" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich",
    "fire",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes, pycodestyle, and isort
select = ["F", "E", "W", "I"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
] 